2015-06-12  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Change binding of
	"$bracket-list$" to a macro.

2015-06-11  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Bind "sequence" and
	"constant-vetor".

2015-06-08  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): On "-e" flag, pass error port to Shell.run
	so warnings get written out.

2015-06-06  Per Bothner  <per@bothner.com>

	* repl.java (setLanguage): New static method.
	(processArgs): Use it.

2015-05-20  Per Bothner  <per@bothner.com>

	* lang/Lambda.java (rewriteBody): Emit warning if using deprecated
	colon-less return-type specifier.

	* lang/Lambda.java (rewriteBody): Only allow colon-less return-type
	specifier as a single symbol.

2015-05-16  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite_pair): Fix bug in test for missing
	value after keyword.  Make warning more helpful.

2015-05-13  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Added sinh, cosh, tanh,
	asinh, acosh, atanh.

2015-05-09  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (createReadTable): Only recognize 'l'
	exponent marker if in non-standard mode.

2015-05-09  Per Bothner  <per@bothner.com>

	* standard/export.java (rewriteForm): Emit error; don't return null.
	* standard/ImportFromLibrary.java (rewriteForm): Likewise.

2015-04-25  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Handle -D options by calling
	System.setProperty.

2015-04-24  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite_pair): Remove support for
	'equivalent-syntax' - it was only used for 'raise' - and ran into
	hygiene there.  It is now easier to use a validate-apply property.

2015-04-22  Per Bothner  <per@bothner.com>

	* repl.java: Re-write to support "--with-arg-count=N" option.
	(processArgs): Move argument-processing logic to new non-static method.
	Also handle processing of final named-module or repl default action.